# ExercismPractice

./: .gitignore  README.md
Cpp/: new_project.sh
Cpp/1_template/: README.md  header.h  source.cpp  test.cpp
Cpp/acronym/: README.md  acronym.cpp  acronym.h  test.cpp
Cpp/all_your_base/: README.md  all_your_base.cpp  all_your_base.h  test.cpp
Cpp/allergies/: README.md  allergies.cpp  allergies.h  test.cpp
Cpp/anagram/: README.md  anagram.cpp  anagram.h  test.cpp
Cpp/armstrong_numbers/: README.md  armstrong_numbers.cpp  armstrong_numbers.h  test.cpp
Cpp/atbash_cipher/: README.md  atbash_cipher.cpp  atbash_cipher.h  test.cpp
Cpp/beer_song/: README.md  beer_song.cpp  beer_song.h  test.cpp
Cpp/binary_search/: README.md  binary_search.cpp  binary_search.h  test.cpp
Cpp/binary_search_tree/: README.md  binary_search_tree.cpp  binary_search_tree.h  test.cpp
Cpp/bob/: README.md  bob.cpp  bob.h  test.cpp
Cpp/circular_buffer/: README.md  circular_buffer.cpp  circular_buffer.h  test.cpp
Cpp/clock/: README.md  clock.cpp  clock.h  test.cpp
Cpp/collatz_conjecture/: README.md  collatz_conjecture.cpp  collatz_conjecture.h  test.cpp
Cpp/complex_numbers/: README.md  complex_numbers.cpp  complex_numbers.h  test.cpp
Cpp/crypto_square/: README.md  crypto_square.cpp  crypto_square.h  test.cpp
Cpp/difference_of_squares/: README.md  difference_of_squares.cpp  difference_of_squares.h  test.cpp
Cpp/etl/: README.md  etl.cpp  etl.h  test.cpp
Cpp/food_chain/: README.md  food_chain.cpp  food_chain.h  test.cpp
Cpp/gigasecond/: README.md  gigasecond.cpp  gigasecond.h  test.cpp
Cpp/grade_school/: README.md  grade_school.cpp  grade_school.h  test.cpp
Cpp/grains/: README.md  grains.cpp  grains.h  test.cpp
Cpp/hamming/: README.md  hamming.cpp  hamming.h  test.cpp
Cpp/isogram/: README.md  isogram.cpp  isogram.h  test.cpp
Cpp/leap/: README.md  leap.cpp  leap.h  test.cpp
Cpp/luhn/: README.md  luhn.cpp  luhn.h  test.cpp
Cpp/matching_brackets/: README.md  matching_brackets.cpp  matching_brackets.h  test.cpp
Cpp/meetup/: README.md  meetup.cpp  meetup.h  test.cpp
Cpp/nth_prime/: README.md  nth_prime.cpp  nth_prime.h  test.cpp
Cpp/nucleotide_count/: README.md  nucleotide_count.cpp  nucleotide_count.h  test.cpp
Cpp/pangram/: README.md  pangram.cpp  pangram.h  test.cpp
Cpp/pascals_triangle/: README.md  pascals_triangle.cpp  pascals_triangle.h  test.cpp
Cpp/phone_number/: README.md  phone_number.cpp  phone_number.h  test.cpp
Cpp/prime_factors/: README.md  prime_factors.cpp  prime_factors.h  test.cpp
Cpp/protein_translation/: README.md  protein_translation.cpp  protein_translation.h  test.cpp
Cpp/queen_attack/: README.md  queen_attack.cpp  queen_attack.h  test.cpp
Cpp/raindrops/: README.md  raindrops.cpp  raindrops.h  test.cpp
x86-64_Assembly/zzz-template/: CMakeLists.txt
(+65 files in other folders)
